@@ -1,4 +1,7 @@
-[b]Version 0.8.0[/b]:
+[b]Version 0.7.1[/b]:
+
+(2012-02-22)
+ * Now it's possible to change the opensubtitles server.
 
 (2012-02-19)
  * Store by default the screenshots in a folder inside the user's pictures 
